Adding more details

--- a/index.html
+++ b/index.html
@@ -1,29 +1,65 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Divya Venugopal</title>
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   </head>
+  <header class="jumbotron">
+    <div class="container">
+        <div class="row row-header">
+            <div class="col-12 col-sm-7">
+            <h1>&lt;div&gt; Divya Venugopal &lt;/div&gt;</h1>
+        </div>
+    </div>
+</header>
   <body>
-    <h1 style="color: olive; font-size: 60px; text-align: center;">&lt;div&gt;Divya Venugopal&lt;/div&gt;</h1>
+  </br>
+  </br>
     <div class="summary">
-    <p>Mission-driven engineering leader with experience leading large-scale digital transformation in the retail industry who is passionate about people and technology.</p>
-    <p>11+ years of experience in retail (instore and ecommerce).</p>
-    <p>Large scale digital transformation of Point of Sale, Mobile POS, Self Checkout, Point of Rental across USA and LATAM.</p>
+    <h1 style="color: #5b4152; font-size: 20px; text-align: left;">Summary</h1>
+    <p>* Mission-driven engineering leader with experience leading large-scale digital transformation in the retail industry who is passionate about people and technology.</p>
+    <p>* 11+ years of experience in retail (instore and ecommerce).</p>
+    <p>* Large scale digital transformation of Point of Sale, Mobile POS, Self Checkout, Point of Rental across USA and LATAM.</p>
+    <p>* Google Cloud Certified <b>Professional Cloud Architect</b></p>
+    </div>
+    </br>
+    </br>
+    <div class="skills">
+    <h1 style="color: #5b4152; font-size: 20px; text-align: left;">Skills</h1>
     <p><u>Programming Languages:</u> C++, C#.Net, Java, JNI, React, Node, Electron, Kotlin, GraphQL</p>
     <p><u>Platforms:</u> Windows, Linux, Android</p>
-    <p><u>Tools:</u> Drone.io, Docker, GCP, Grafana, NxLog, Gatling, CppUnit, JUnit, Mockito, OPOS</p>
+    <p><u>Tools:</u> Drone.io, Docker, GCP, Grafana, NxLog, Gatling, CppUnit, JUnit, Mockito, OPOS, Kafka</p>
     <p><u>Payment Devices:</u> Verifone, Hypercom</p>
     <p><u>Prototyping:</u> Arduino Uno, NodeMCU, RaspberryPi</p>
     </div>
+    </br>
+    </br>
+    <div class="coursera">
+      <h1 style="color: #5b4152; font-size: 20px; text-align: left;">Courses</h1>
+      <p>* Cloud Architecture with Google Cloud Specialization</p>
+      <p>* How Google does Machine Learning</p>
+      <p>* Foundation for Istio</p>
+    </div>
+  </body>
+
+  
     <footer>
       <hr>
       <div class="contacts">
-      <p>Available for mentoring and consultation. Contact Me:</p>
-      <button style="font-size:24px" onclick="location.href='mailto:divyavenugopal_@outlook.com';"><i class="fa fa-envelope"></i></button>
-      <button style="font-size:24px"><a href= 'https://github.com/Divzz'><i class="fa fa-github"></i></a></button>
+      <p>Available for mentoring and consultation:</p>
+      </br>
+      <button style="font-size:24px" onclick="location.href='mailto:divyavenugopal_@outlook.com';"><i class="fas fa-envelope"></i></button>
+      <button style="font-size:24px"><a href= 'https://github.com/Divzz'><i class="fab fa-github"></i></a></button>
+      <button style="font-size:24px"><a href= 'https://medium.com/@divya.venu'><i class="fab fa-medium"></i></a></button>
+      <button style="font-size:24px"><a href= 'https://www.kaggle.com/divyavenugopal'><i class="fab fa-kaggle"></i></a></button>
+      <button style="font-size:24px"><a href= 'https://twitter.com/'><i class="fab fa-twitter"></i></a></button>
+      <button style="font-size:24px"><a href= 'https://www.linkedin.com/'><i class="fab fa-linkedin"></i></a></button>
+    </div>
+    </br>
+    <div class="copyright">
+      <p>© 2021 Divya Venugopal</p>
     </div>
     </footer>
-  </body>
 </html>
